--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "maska": "^2.1.11",
     "v-mask": "^2.3.0",
-    "vue": "^3.4.21",
-    "vue-the-mask": "^0.11.1"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
